Regions overlapping solved

--- a/src/components/Home/Regions/Regions.css
+++ b/src/components/Home/Regions/Regions.css
@@ -44,6 +44,7 @@
   min-width: 80px;
 }
 @media all and (max-width: 1000px) {
+
   .Calicut {
     left: 10%;
   }
@@ -57,6 +58,9 @@
   }
 }
 @media all and (max-width: 650px) {
+.RegionsText{
+display:none;
+}
   .Calicut {
     left: 5%;
     top: 50%;
